--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,22 @@
 version: '2'
 services:
-    jenkins:
+    jenkins_qa:
         build:
             context: docker_conf/.
             dockerfile: Dockerfile
+        container_name:  jenkins_qa
         ports:
             - "8080:8080"
         volumes:
-            - /home/projects/jenkins/data_:/var/jenkins_home/
+            - jenkins_qa_data:/var/jenkins_home/
             - /home/projects/awsb_devops:/var/jenkins_home/awsb_devops
             - /var/run/docker.sock:/var/run/docker.sock
             - /usr/bin/docker:/usr/bin/docker:ro
         networks: 
             - jenkins
+
+volumes:
+    jenkins_qa_data:
+        driver: local
 networks:
     jenkins:
