--- a/docker_conf/Dockerfile
+++ b/docker_conf/Dockerfile
@@ -1,4 +1,4 @@
-FROM jenkins/jenkins:2.426.3-lts
+FROM jenkins/jenkins:2.426.2-lts
 
 USER root
 
@@ -12,4 +12,6 @@ RUN apt-get update && apt-get install -y sshpass python3-pip
 RUN pip3 install ansible --break-system-packages
 
 RUN mkdir ~/.ssh
-RUN ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+RUN ssh-keyscan -H github.com >> ~/.ssh/known_hosts &&\
+    ssh-keyscan -H 192.168.209.39 >> ~/.ssh/known_hosts &&\
+    ssh-keyscan -H 192.168.209.40 >> ~/.ssh/known_hosts
